src/sidebar/Sidebar.scss
:root {
  --sidebar-condensed-width: 80px;
  --sidebar-opened-width: 15rem;
  --sidebar-width: var(--sidebar-opened-width);
}

.sidebar {
  margin-top: var(--header-height);
  height: calc(100vh - var(--header-height));
  background-color: var(--sapList_Background);
  position: fixed;
  width: var(--sidebar-width);
  transition: width 0.3s;
  left: 0;

  display: flex;
  justify-content: space-between;
  flex-direction: column;

  .sidebar__content {
    overflow-x: hidden;
    flex-grow: 1;
  }
}

